--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: QMag website
+title: QMag@USTC
 email: sgao@ustc.edu.cn
 description: >- # this means to ignore newlines until "baseurl:"
   This is the QMag website. We are a research lab based at the University of
