--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: QMag @ USTC
 email: sgao@ustc.edu.cn
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the QMag website. We are a research lab based at the University of
-  Science and Technology of China. We utilize neutron and X-ray scattering to
-  study the spin corrections in quantum magnets.
+  This is the website of QMag, a research lab on quantum magnets at the University of
+  Science and Technology of China.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
