--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  moon-dust
 
 # Build settings
 markdown: kramdown
-theme: minima
+remote_theme: moon-dust/minima
 plugins:
   - jekyll-feed
 
