--- a/_data/sliders.yml
+++ b/_data/sliders.yml
@@ -3,16 +3,17 @@
   captions: true
   images:
     - src: /assets/images/banner_230806.jpg
-      # alt: Minimum required attributes
-    - src: /assets/images/banner_230806.jpg
-      # alt: Use data-src for on-demand loading
-    - src: /assets/images/banner_230806.jpg
-      # alt: Use data-src-2x for HiDPI devices
+      alt: Minimum required attributes
+    - data-src: /assets/images/banner_230806.jpg
+      alt: Use data-src for on-demand loading
+    - data-src: /img/3.jpg
+      data-src-2x: /assets/images/banner_230806.jpg
+      alt: Use data-src-2x for HiDPI devices
     - src:  /assets/images/banner_230806.jpg
-      # alt: Links work too
-      # href: https://github.com/jekylltools/jekyll-ideal-image-slider-include
+      alt: Links work too
+      href: https://github.com/jekylltools/jekyll-ideal-image-slider-include
   settings:
-    height: 350
+    height: 400
     initialHeight:
     maxHeight:
     interval:
