--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: sgao@ustc.edu.cn
 description: >- # this means to ignore newlines until "baseurl:"
   This is the website of QMag, a research lab on quantum magnets at the University of
   Science and Technology of China.
-author: true
+# author: true
 author.name: Shang Gao
 author.email: sgao@ustc.edu.cn
 baseurl: "" # the subpath of your site, e.g. /blog
