--- a/_data/sliders.yml
+++ b/_data/sliders.yml
@@ -5,8 +5,8 @@
     - src: /assets/images/banner_230806.jpg
       alt: Spinon continuum excitations in Sr2V3O9 (arXiv:2307.12093)
       href: https://arxiv.org/abs/2307.12093
-    - src: /assets/images/banner_230806.jpg
-      alt: Spinon continuum excitations in Sr2V3O9 (arXiv:2307.12093)
+    - src: /assets/images/banner_230814.jpg
+      alt: Introducing JuliaSCGA (nematic bond theory on a square lattice)
       href: https://arxiv.org/abs/2307.12093
   settings:
     height: "'auto'"
